# snake-arcade

./: README.md  pyproject.toml
snake/: __main__.py  constants.py
snake/game/: food.py  game.py  snake.py
src/: __main__.py  constants.py
src/game/: game.py  snake.py
